messages.properties classement

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -4,6 +4,30 @@ Idrucherinconnu=Identifiant rucher inconnu
 Idessaiminconnu=Identifiant essaim inconnu
 Idhausseinconnu=Identifiant hausse inconnu
 
+# enum recolte/TypeMiel.java
+GARRIGUE=Garrigue
+LAVANDE=Lavande
+CHATAIGNIER=Châtaignier
+TOUTES_FLEURS=Toutes fleurs
+ROMARIN=Romarin
+
+# enum evenement/TypeEvenement.java
+RUCHEAJOUTRUCHER=Ajout dans rucher
+AJOUTESSAIMRUCHE=Essaim mis dans ruche
+HAUSSEPOSERUCHE=Ajout hausse
+HAUSSERETRAITRUCHE=Retrait hausse
+HAUSSEREMPLISSAGE=Remplissage hausse
+ESSAIMTRAITEMENT=Essaim traitement
+ESSAIMTRAITEMENTFIN=Essaim fin traitement
+ESSAIMSUCRE=Essaim sucre
+COMMENTAIRERUCHE=Commentaire ruche 
+COMMENTAIREHAUSSE=Commentaire hausse
+COMMENTAIREESSAIM=Commentaire essaim
+COMMENTAIRERUCHER=Commentaire rucher
+ESSAIMDISPERSION=Dispersion de l'essaim
+RUCHEPESEE=Poids de la ruche
+RUCHECADRE=Cadres de la ruche
+
 # ruche/RucheController.java
 cloneruchecreees=Ruche(s) {0} créée(s)
 
@@ -11,12 +35,14 @@ cloneruchecreees=Ruche(s) {0} créée(s)
 cloneessaimcrees=Essaim(s) {0} créé(s)
 LeNomXXExiste=Le nom {0} existe déjà
 
-# RecolteHausseController.java
+# recolte/RecolteHausseController.java
 pasDeHausseAenlever=Pas de hausses à enlever de leurs ruches
 haussesEnlevees=Les hausses {0} ont été enlevées des ruches {1}
 
-# recolte/recoltesListe.html
-statistiquesProd=Statistiques production annuelle
+# hausse/HausseController.java
+clonehaussecreees=Hausse(s) {0} créée(s)
+
+#################### Templates ########################################
 
 # include.html
 include.footer= *** Ruches - GPL3 - 
@@ -106,16 +132,25 @@ recherche=Recherche...
 poidskg=Poids (kg)
 Total=Total
 Ordre=Ordre
+date=Date
+aucun=<Aucun>
+aucune=<Aucune>
 
-# recolte/recoltesStatEssaim.html
-Totalpage=Total page
-ProductionEssaim=Production Essaims
-ProductionEssaimRecolte=Production Essaim/Récolte
+# error.html
+page=Page
+oups=Oups, quelque chose s'est mal passé !
+Erreur=Erreur
 
-# ruche/ruchesListePlus.html ruche/ruchesListePlusRucher.html
-commentaire1=Commentaire1
-commentaire2=Commentaire2
-commentaire3=Commentaire3
+# includeForm.html
+finTraitement=Fin du traitement
+touteperiode=Toute période
+moinsdunan=Moins d'un an
+moinsdunmois=Moins d'un mois
+moinsdunesemaine=Moins d'une semaine
+moinsdunjour=Moins d'un jour
+datesprecises=Dates précises
+
+#################### essaim ########################################
 
 # essaim/essaimEssaimerForm.html
 Essaimage=Essaimage
@@ -137,29 +172,212 @@ EcartType= Écart type
 #EnCouveuse=Pas née
 #horsRuche=Hors ruche
 
-# rucher/rucherStatistiques.html
-aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total pour le rucher<br/>- Récolte Max et Min<br/>- Moyen par récolte
-ProductionRuchersRecolte=Production Ruchers par récolte
+# essaim/essaimGraphe.html
+MielKg=Miel(kg)
+MielDescKg=Miel descendance(kg) 
 
-# error.html
-page=Page
-oups=Oups, quelque chose s'est mal passé !
-Erreur=Erreur
+# essaim/essaimsListe.html
+statistiquesproduction=Statistiques production
+statistiquesage=Statistiques âge des reines
+selectessaimstraiter=Sélectionner les essaims à traiter
+evenementsSucre=Ajouter des événements Sucre
+evenementsTraitement=Ajouter des événements Traitement
+evenementsCommentaire=Ajouter des événements Commentaire
+BLUE=Bleu
+WHITE=Blanc
+YELLOW=Jaune
+RED=Rouge
+GREEN=Vert
+ORANGE=
+ajouterEssaim=Ajouter un essaim
+reineMarquee=Reine marquée
+reineCouleurMarquage=Couleur de marquage
+reineDateNaissance=Date de naissance
+souche=Souche
+agressivite=Agressivité
+proprete=Propreté
+listeEssaims=Liste des essaims
 
-# rucher/rucherDetail.html
-Pasderuche=Pas de ruche actuellement dans ce rucher
-depotNePeutEtreSupprime=Le dépôt ne peut être supprimé
-ruchernonsupprimerefrecolte=Ce rucher ne peut être supprimé, il est référencé dans une récolte
-supprimerruchereteven=Supprimer ce rucher et ses événements ?
-supprimercerucher?=Supprimer ce rucher ?
-nomruchesvirgule=Nom des ruches séparés par une virgule
-historique=Historique
-poidsVide=Poids
-nbCadres=Cadres
-rucher=Rucher
-depot=Dépôt
-ajoutRuches=Ajouter des ruches
-poidsParRuches=Poids/Ruches
+# essaim/essaimSucreLotForm.html
+ajoutSucreLot=Ajout de sucre au lot d'essaims 
+
+# essaim/essaimTraitementLotForm.html
+traitementLot=Traitement Varroa du lot d'essaims 
+
+# essaim/essaimCommentaireLotForm.html
+commentaireLotEssaim=Ajout d'un commentaire à un lot d'essaims
+
+# essaim/essaimAssociationForm.html
+echangePositionsRuches=Échanger les positions des ruches {0} et {1}
+AttentionDipersion=Attention, Enregistrer va disperser l''essaim {0}
+association=Association
+
+# essaim/essaimSucreForm.html
+ajoutSucre=Ajout de sucre 
+
+# essaim/essaimAssociation.html
+mettreessaimdanslaruche=Mettre cet essaim dans la ruche :
+AvecEssaim=Avec Essaim
+essaimdanslaruche=Cet essaim est dans la ruche
+associationruche=Associer avec une ruche
+
+# essaim/essaimAssociation.html
+mettreessaimdansruche=Mettre l'essaim dans cette ruche
+
+# essaim/essaimDispersionForm.html
+retourrucheaudepot=Retour de la ruche au dépôt
+
+# essaim/essaimDetail.html
+essaimsupprimerecolte=Cette essaim ne peut être supprimé, il est référencé dans une récolte
+supprimeressaimevenements=Supprimer cet essaim et ses événements ?
+supprimeressaim=Supprimer cette essaim ?
+nexistentPasOuPasVides=n'existe(nt) pas ou ne sont pas vide(s)
+nomessaimsvirgule=Nom des essaims séparés par une virgule.\nOu avec le nom d'une ruche après le nom\nd'un essaim séparés par un point virgule
+graphedescendance=Graphe de descendance
+evenementCommentaireEssaim=Ajouter un événement Commentaire essaim
+evenementSucre=Ajouter un événement Sucre
+evenementTraitement=Ajouter un événement Traitement
+evenementDispersion=Disperser/Remérer
+evenementPesee=Ajouter un événement Pesée
+evenementCadres=Ajouter un événement Cadres
+essaimer=Essaimer
+actionSucre=Sucre
+traitement=Traitement varroa
+Essaims=Essaims
+essaim=Essaim
+
+# essaim/essaimDispersionForm.html
+aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
+nouvellereine=Remérage, essaim à mettre dans la ruche
+creationevecadrezero=Création événement 0 cadre
+dispersion=Dispersion 
+
+#################### evenement ########################################
+
+# evenement/evenementListe.html
+listeEvenements=Liste des événements
+evenementCree=Créer un événement
+evenements=Événements
+valeur=Valeur
+evenement=Événement
+
+# evenement/evenementSucreListe.html
+evenementssucre=Événements sucre
+
+# evenement/evenementTraitementListe.html
+evenementstraitement=Événements traitement
+
+# evenement/evenementPoidsRucheListe.html
+evenementspoidsruche=Événements poids ruche
+
+# evenement/evenementCadreRucheListe.html
+evenementcadreruche=Événements cadre ruche
+
+# evenement/evenementRemplissageHausseListe.html
+evenementremplissagehausse=Événements remplissage hausse
+
+# evenement/evenementRucheAjoutListe.html
+evenementsrucheajout=Événements ruche ajout rucher
+poidsruche=Poids ruche
+diff=Différence
+
+# evenement/evenementForm.html
+ajouterEvenement=Ajouter un événement
+typeEvenement=Type d'événement
+
+#################### hausse ########################################
+
+# hausse/hausseCommentaireLotForm.html
+commentaireLotHausses=Ajout d'un commentaire à un lot de hausses
+
+# hausse/hausseForm.html
+saisirnbcadresinfmax=Saisir le nombre de cadres < Nombre de cadres max
+nombredecadresmax=Nombre de cadres max
+nombredecadres=Nombre de cadres
+ajouterHausse=Ajouter une hausse
+hausse=Hausse
+
+# hausse/hausseDetail.html
+supprimerhausseevenement=Supprimer cette hausse et ses événements ?
+nomhaussesvirgule=Nom des hausses séparés par une virgule
+supprimerhausse?=Supprimer cette hausse ?
+evenementRemplissage=Ajouter un événement Remplissage
+haussenonsupprimeerefrecolte=Cette hausse ne peut être supprimée, elle est référencée dans une récolte
+supprimerevenement=Supprimer cet événement ?
+afficherrucheetc=Afficher/masquer ruche, essaim...
+Hausses=Hausses
+remplissage=Remplissage
+
+#################### personne ########################################
+
+# personne/personnesListe.html
+prenom=Prénom
+email=Email
+login=Login
+roles=Rôles
+listePersonnes=Liste des personnes
+ajouterPersonne=Ajouter une personne
+Personnes=Personnes
+
+# personne/personneForm.html
+emailexiste=Cet email est déjà utilisé
+personne=Personne
+
+# personne/personneDetail.html
+personnenonsupprimeerefrrucher=Cette personne ne peut être supprimée, elle est référencée dans un rucher
+supprimercettepersonne=Supprimer cette personne ?
+
+#################### recolte ########################################
+
+# recolte/recoltesStatEssaim.html
+Totalpage=Total page
+ProductionEssaim=Production Essaims
+ProductionEssaimRecolte=Production Essaim/Récolte
+
+# recolte/recoltesListe.html
+statistiquesProd=Statistiques production annuelle
+ajouterRecolte=Ajouter une récolte
+Recoltes=Récoltes
+
+# recolte/recolteChoixHausses.html
+ajoutretraithaussesrecolte=Ajout/Retrait de hausses
+retirerHausses=Retirer des hausses
+selecthaussestraiter=Sélectionner les hausses à traiter
+ajouterHausses=Ajouter des hausses
+
+# recolte/recolteHausseForm.html
+plus=Plus
+poidsAvantSupPoidsApres=Le poids avant extraction doit être supérieur ou égal au poids après extraction.
+poidsVideKg=Poids vide {0}kg
+
+# recolte/recolteDetail.html
+recolte=Récolte
+poidsMiel=Poids de miel
+enlverhaussesrecoltedelai=La récolte date de plus de {0} jours, abandon.
+poidsAvant=Poids avant extraction
+poidsApres=Poids après extraction
+recolteHausseDepot=Enlève toutes les hausses de la récolte de leurs ruches
+enlevertoutesleshaussesrecolte=Enlever toutes les hausses de cette récolte de leurs ruches ?
+supprimerrecolteethausses=Supprimer cette récolte et toutes ses hausses ?
+statistiquesessaims=Statistiques essaims
+saisirpoids=Saisir les poids
+totalPourLaRuche=Total pour la ruche
+choixHausesRecolte=Choix des hausses de la récolte
+typeMiel=Type de miel
+poidsMielPot=Poids de miel mis en pot
+poidsMielMoyen=Poids de miel moyen par ruche
+haussesRecolte=Hausses de la récolte
+
+# recolte/recoltesStat.html
+productionessaim=Production par essaim.
+poidsMielHausses=Poids de miel hausses
+
+#################### ruche ########################################
+
+# ruche/ruchesListePlus.html ruche/ruchesListePlusRucher.html
+commentaire1=Commentaire1
+commentaire2=Commentaire2
+commentaire3=Commentaire3
 
 # ruche/rucheDetail.html
 ruchenepeutetresupprimeerecolte=Cette ruche ne peut être supprimée, elle est référencée dans une récolte
@@ -212,9 +430,33 @@ pesee=Pesée
 cadresLe=cadres le
 evenruchercadreaide=B bâti, G gaufré, A amorcé, M Miel, P Pollen, I indéterminé, V vide, T partition, Couvain operculé O, ouvert U
 
-# essaim/essaimGraphe.html
-MielKg=Miel(kg)
-MielDescKg=Miel descendance(kg) 
+# ruche/rucheCommentaireLotForm.html
+commentaireLotRuche=Ajout d'un commentaire à un lot de ruches  
+
+# ruche/rucheTypesListe.html
+rucheTypes=Types de ruches
+ajouterRucheType=Ajouter un type de ruche
+
+#################### rucher ########################################
+
+# rucher/rucherStatistiques.html
+aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total pour le rucher<br/>- Récolte Max et Min<br/>- Moyen par récolte
+ProductionRuchersRecolte=Production Ruchers par récolte
+
+# rucher/rucherDetail.html
+Pasderuche=Pas de ruche actuellement dans ce rucher
+depotNePeutEtreSupprime=Le dépôt ne peut être supprimé
+ruchernonsupprimerefrecolte=Ce rucher ne peut être supprimé, il est référencé dans une récolte
+supprimerruchereteven=Supprimer ce rucher et ses événements ?
+supprimercerucher?=Supprimer ce rucher ?
+nomruchesvirgule=Nom des ruches séparés par une virgule
+historique=Historique
+poidsVide=Poids
+nbCadres=Cadres
+rucher=Rucher
+depot=Dépôt
+ajoutRuches=Ajouter des ruches
+poidsParRuches=Poids/Ruches
 
 # rucher/ruchersListe.html
 carteGg=Carte Google
@@ -278,230 +520,6 @@ exportPng=Export PNG
 exportPdf=Export PDF
 distButinage=Distances de butinage
 Pasdessaim=Pas d'essaim
-
-# personne/personnesListe.html
-prenom=Prénom
-email=Email
-login=Login
-roles=Rôles
-listePersonnes=Liste des personnes
-ajouterPersonne=Ajouter une personne
-Personnes=Personnes
-
-# personne/personneForm.html
-emailexiste=Cet email est déjà utilisé
-personne=Personne
-
-# personne/personneDetail.html
-personnenonsupprimeerefrrucher=Cette personne ne peut être supprimée, elle est référencée dans un rucher
-supprimercettepersonne=Supprimer cette personne ?
-
-# essaim/essaimsListe.html
-statistiquesproduction=Statistiques production
-statistiquesage=Statistiques âge des reines
-selectessaimstraiter=Sélectionner les essaims à traiter
-evenementsSucre=Ajouter des événements Sucre
-evenementsTraitement=Ajouter des événements Traitement
-evenementsCommentaire=Ajouter des événements Commentaire
-BLUE=Bleu
-WHITE=Blanc
-YELLOW=Jaune
-RED=Rouge
-GREEN=Vert
-ORANGE=
-ajouterEssaim=Ajouter un essaim
-reineMarquee=Reine marquée
-reineCouleurMarquage=Couleur de marquage
-reineDateNaissance=Date de naissance
-souche=Souche
-agressivite=Agressivité
-proprete=Propreté
-listeEssaims=Liste des essaims
-
-# essaim/essaimSucreLotForm.html
-ajoutSucreLot=Ajout de sucre au lot d'essaims 
-
-# essaim/essaimTraitementLotForm.html
-traitementLot=Traitement Varroa du lot d'essaims 
-
-# essaim/essaimCommentaireLotForm.html
-commentaireLotEssaim=Ajout d'un commentaire à un lot d'essaims
-
-# ruche/rucheCommentaireLotForm.html
-commentaireLotRuche=Ajout d'un commentaire à un lot de ruches  
-
-# hausse/hausseCommentaireLotForm.html
-commentaireLotHausses=Ajout d'un commentaire à un lot de hausses
-
-# essaim/essaimAssociationForm.html
-echangePositionsRuches=Échanger les positions des ruches {0} et {1}
-AttentionDipersion=Attention, Enregistrer va disperser l''essaim {0}
-association=Association
-
-# essaim/essaimSucreForm.html
-ajoutSucre=Ajout de sucre 
-
-# essaim/essaimAssociation.html
-mettreessaimdanslaruche=Mettre cet essaim dans la ruche :
-AvecEssaim=Avec Essaim
-essaimdanslaruche=Cet essaim est dans la ruche
-associationruche=Associer avec une ruche
-
-mettreessaimdansruche=Mettre l'essaim dans cette ruche
-retourrucheaudepot=Retour de la ruche au dépôt
-
-# essaim/essaimDetail.html
-essaimsupprimerecolte=Cette essaim ne peut être supprimé, il est référencé dans une récolte
-supprimeressaimevenements=Supprimer cet essaim et ses événements ?
-supprimeressaim=Supprimer cette essaim ?
-nexistentPasOuPasVides=n'existe(nt) pas ou ne sont pas vide(s)
-nomessaimsvirgule=Nom des essaims séparés par une virgule.\nOu avec le nom d'une ruche après le nom\nd'un essaim séparés par un point virgule
-graphedescendance=Graphe de descendance
-evenementCommentaireEssaim=Ajouter un événement Commentaire essaim
-evenementSucre=Ajouter un événement Sucre
-evenementTraitement=Ajouter un événement Traitement
-evenementDispersion=Disperser/Remérer
-evenementPesee=Ajouter un événement Pesée
-evenementCadres=Ajouter un événement Cadres
-essaimer=Essaimer
-actionSucre=Sucre
-traitement=Traitement varroa
-Essaims=Essaims
-essaim=Essaim
-
-# essaim/essaimDispersionForm.html
-aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
-nouvellereine=Remérage, essaim à mettre dans la ruche
-creationevecadrezero=Création événement 0 cadre
-dispersion=Dispersion 
-
-# hausse/hausseForm.html
-saisirnbcadresinfmax=Saisir le nombre de cadres < Nombre de cadres max
-nombredecadresmax=Nombre de cadres max
-nombredecadres=Nombre de cadres
-ajouterHausse=Ajouter une hausse
-hausse=Hausse
-
-# Hausse detail clone
-clonehaussecreees=Hausse(s) {0} créée(s)
-
-# récoltes
-recolte=Récolte
-Recoltes=Récoltes
-date=Date
-poidsMiel=Poids de miel
-remplissage=Remplissage
-ajouterRecolte=Ajouter une récolte
-
-# enum TypeMiel.java
-GARRIGUE=Garrigue
-LAVANDE=Lavande
-CHATAIGNIER=Châtaignier
-TOUTES_FLEURS=Toutes fleurs
-ROMARIN=Romarin
-
-# recolte/recolteChoixHausses.html
-ajoutretraithaussesrecolte=Ajout/Retrait de hausses
-retirerHausses=Retirer des hausses
-selecthaussestraiter=Sélectionner les hausses à traiter
-ajouterHausses=Ajouter des hausses
-
-# recolte/recolteHausseForm.html
-plus=Plus
-poidsAvantSupPoidsApres=Le poids avant extraction doit être supérieur ou égal au poids après extraction.
-poidsVideKg=Poids vide {0}kg
-
-# recolte/recolteDetail.html
-enlverhaussesrecoltedelai=La récolte date de plus de {0} jours, abandon.
-poidsAvant=Poids avant extraction
-poidsApres=Poids après extraction
-recolteHausseDepot=Enlève toutes les hausses de la récolte de leurs ruches
-enlevertoutesleshaussesrecolte=Enlever toutes les hausses de cette récolte de leurs ruches ?
-supprimerrecolteethausses=Supprimer cette récolte et toutes ses hausses ?
-statistiquesessaims=Statistiques essaims
-saisirpoids=Saisir les poids
-totalPourLaRuche=Total pour la ruche
-choixHausesRecolte=Choix des hausses de la récolte
-typeMiel=Type de miel
-poidsMielPot=Poids de miel mis en pot
-poidsMielMoyen=Poids de miel moyen par ruche
-haussesRecolte=Hausses de la récolte
-
-# recolte/recoltesStat.html
-productionessaim=Production par essaim.
-poidsMielHausses=Poids de miel hausses
-
-# enum TypeEvenement.java
-RUCHEAJOUTRUCHER=Ajout dans rucher
-AJOUTESSAIMRUCHE=Essaim mis dans ruche
-HAUSSEPOSERUCHE=Ajout hausse
-HAUSSERETRAITRUCHE=Retrait hausse
-HAUSSEREMPLISSAGE=Remplissage hausse
-ESSAIMTRAITEMENT=Essaim traitement
-ESSAIMTRAITEMENTFIN=Essaim fin traitement
-ESSAIMSUCRE=Essaim sucre
-COMMENTAIRERUCHE=Commentaire ruche 
-COMMENTAIREHAUSSE=Commentaire hausse
-COMMENTAIREESSAIM=Commentaire essaim
-COMMENTAIRERUCHER=Commentaire rucher
-ESSAIMDISPERSION=Dispersion de l'essaim
-RUCHEPESEE=Poids de la ruche
-RUCHECADRE=Cadres de la ruche
-
-# evenement/evenementListe.html
-listeEvenements=Liste des événements
-
-# includeForm.html
-finTraitement=Fin du traitement
-touteperiode=Toute période
-moinsdunan=Moins d'un an
-moinsdunmois=Moins d'un mois
-moinsdunesemaine=Moins d'une semaine
-moinsdunjour=Moins d'un jour
-datesprecises=Dates précises
-
-# evenement/evenementSucreListe.html
-evenementssucre=Événements sucre
-
-# evenement/evenementTraitementListe.html
-evenementstraitement=Événements traitement
-
-# evenement/evenementPoidsRucheListe.html
-evenementspoidsruche=Événements poids ruche
-
-# evenement/evenementCadreRucheListe.html
-evenementcadreruche=Événements cadre ruche
-
-# evenement/evenementRemplissageHausseListe.html
-evenementremplissagehausse=Événements remplissage hausse
-
-# evenement/evenementRucheAjoutListe.html
-evenementsrucheajout=Événements ruche ajout rucher
-poidsruche=Poids ruche
-diff=Différence
-
-# ruche/rucheTypesListe.html
-rucheTypes=Types de ruches
-ajouterRucheType=Ajouter un type de ruche
-
-valeur=Valeur
-typeEvenement=Type d'événement
-evenement=Événement
-evenements=Événements
-ajouterEvenement=Ajouter un événement
-evenementCree=Créer un événement
-aucun=<Aucun>
-aucune=<Aucune>
-
-# hausse/hausseDetail.html
-supprimerhausseevenement=Supprimer cette hausse et ses événements ?
-nomhaussesvirgule=Nom des hausses séparés par une virgule
-supprimerhausse?=Supprimer cette hausse ?
-evenementRemplissage=Ajouter un événement Remplissage
-haussenonsupprimeerefrecolte=Cette hausse ne peut être supprimée, elle est référencée dans une récolte
-supprimerevenement=Supprimer cet événement ?
-afficherrucheetc=Afficher/masquer ruche, essaim...
-Hausses=Hausses
 
 # rucher/rucherMeteo.html
 aujourdhui=Aujourd'hui
