--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -4,6 +4,30 @@ Idrucherinconnu=Unknown apiary id
 Idessaiminconnu=Unknown swarm id
 Idhausseinconnu=Unknown super id
 
+# enum recolte/TypeMiel.java
+GARRIGUE=Garrigue
+LAVANDE=Lavander
+CHATAIGNIER=Chestnut tree
+TOUTES_FLEURS=Polyfloral
+ROMARIN=Rosemary
+
+# enum evenement/TypeEvenement.java
+RUCHEAJOUTRUCHER=Add in an apiary
+AJOUTESSAIMRUCHE=Swarm set in hive
+HAUSSEPOSERUCHE=Add a super
+HAUSSERETRAITRUCHE=Remove a super
+HAUSSEREMPLISSAGE=Super filling
+ESSAIMTRAITEMENT=Swarm treatment
+ESSAIMTRAITEMENTFIN=Samrm end of treatment
+ESSAIMSUCRE=Swarm sugar
+COMMENTAIRERUCHE=Hive comment 
+COMMENTAIREHAUSSE=Super comment
+COMMENTAIREESSAIM=Swarm comment
+COMMENTAIRERUCHER=Apiary comment
+ESSAIMDISPERSION=Swarm dispersing
+RUCHEPESEE=Hive weight
+RUCHECADRE=Cadres de la ruche
+
 # ruche/RucheController.java
 cloneruchecreees=Hives(s) {0} created
 
@@ -11,12 +35,14 @@ cloneruchecreees=Hives(s) {0} created
 cloneessaimcrees=Swarm(s) {0} created
 LeNomXXExiste=The name {0} already exists
 
-# RecolteHausseController.java
+# recolte/RecolteHausseController.java
 pasDeHausseAenlever=No supers to remove from their hives
 haussesEnlevees=Supers {0} have been removed from their hives {1}
 
-# recolte/recoltesListe.html
-statistiquesProd=Annual production statistics
+# hausse/HausseController.java
+clonehaussecreees=Super(s) {0} created
+
+#################### Templates ########################################
 
 # include.html
 include.footer= *** Ruches - GPL3 -
@@ -106,16 +132,25 @@ recherche=Search...
 poidskg=Weight (kg)
 Total=Total
 Ordre=Order
+date=Date
+aucun=<None>
+aucune=<None>
 
-# recolte/recoltesStatEssaim.html
-Totalpage=Total page
-ProductionEssaim=Swarm Production
-ProductionEssaimRecolte=Swarm/Harvest Production
+# error.html
+page=Page
+oups=Oups, something went wrong !
+Erreur=Error
 
-# ruche/ruchesListePlus.html ruche/ruchesListePlusRucher.html
-commentaire1=Comments1
-commentaire2=Comments2
-commentaire3=Comments3
+# includeForm.html
+finTraitement=End of treatment
+touteperiode=Any period
+moinsdunan=Less than a year
+moinsdunmois=Less than a month
+moinsdunesemaine=Less than a week
+moinsdunjour=Less than a day
+datesprecises=Specific dates
+
+#################### essaim ########################################
 
 # essaim/essaimEssaimerForm.html
 Essaimage=Swarming
@@ -137,29 +172,212 @@ EcartType= Standard deviation
 #EnCouveuse=Not born
 #horsRuche=Outside the hive
 
-# rucher/rucherStatistiques.html
-aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min and Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
-ProductionRuchersRecolte=Production Apiaries per harvest
+# essaim/essaimGraphe.html
+MielKg=Honey(kg)
+MielDescKg=Descendants honey(kg) 
 
-# error.html
-page=Page
-oups=Oups, something went wrong !
-Erreur=Error
+# essaim/essaimsListe.html
+statistiquesproduction=Production satistics
+statistiquesage=Queens age statistics
+selectessaimstraiter=Select swarms for treatment
+evenementsSucre=Add sugar events
+evenementsTraitement=Add treatment events
+evenementsCommentaire=Add comment events
+BLUE=Blue
+WHITE=White
+YELLOW=Yellow
+RED=Red
+GREEN=Green
+ORANGE=
+ajouterEssaim=Add a swarm
+reineMarquee=Marked queen
+reineCouleurMarquage=Marking color
+reineDateNaissance=Date of birth
+souche=Stem
+agressivite=Agressiveness
+proprete=Cleanliness
+listeEssaims=Swarms list
 
-# rucher/rucherDetail.html
-Pasderuche=Currently no hive in this apiary
-depotNePeutEtreSupprime=The depot cannot be deleted
-ruchernonsupprimerefrecolte=This apiary cannot be deleted, it is used in a harvest
-supprimerruchereteven=Delete this apiary and all its events?
-supprimercerucher?=Delete this apiary?
-nomruchesvirgule=Hive names separated with a comma
-historique=History
-poidsVide=Weight
-nbCadres=Frames
-rucher=Apiary
-depot=Depot
-ajoutRuches=Add hives
-poidsParRuches=Weight/Hives
+# essaim/essaimSucreLotForm.html
+ajoutSucreLot=Add sugar to the batch of swarms 
+
+# essaim/essaimTraitementLotForm.html
+traitementLot=Batch Varroa treatment 
+
+# essaim/essaimCommentaireLotForm.html
+commentaireLotEssaim=Add a comment to the batch of swarms
+
+# essaim/essaimAssociationForm.html
+echangePositionsRuches=Exchange positions of hives {0} and {1}
+AttentionDipersion=Attention save will disperse the swarm {0}
+association=Association
+
+# essaim/essaimSucreForm.html
+ajoutSucre=Add sugar 
+
+# essaim/essaimAssociation.html
+mettreessaimdanslaruche=Put this swarm in hive :
+AvecEssaim=With Swarm
+essaimdanslaruche=This swarm in in hive
+associationruche=Association with a hive
+
+# essaim/essaimAssociation.html
+mettreessaimdansruche=Put swarm in this hive
+
+# essaim/essaimDispersionForm.html
+retourrucheaudepot=Hive back to depot
+
+# essaim/essaimDetail.html
+essaimsupprimerecolte=This swarm cannot be deleted, it is used in an harvest
+supprimeressaimevenements=Delete this swarm and his events?
+supprimeressaim=Delete this swarm?
+nexistentPasOuPasVides=do not exist or are not empty
+nomessaimsvirgule=Swarm names separated with a comma\nOr with the name of a hive after the name\nof a swarm separated by a semicolon 
+graphedescendance=Descendants graph
+evenementCommentaireEssaim=Add a swarm comment event
+evenementSucre=Add a sugar event
+evenementTraitement=Add a treatment event
+evenementDispersion=Add a dispersion event/Change queen
+evenementPesee=Add a weight event
+evenementCadres=Add a frame event
+essaimer=Swarm
+actionSucre=Sugar
+traitement=Varroa treatment
+Essaims=Swarms
+essaim=Swarm
+
+# essaim/essaimDispersionForm.html
+aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
+nouvellereine=New queen, swarm for hive
+creationevecadrezero=Create 0 super event
+dispersion=Dispersing 
+
+#################### evenement ########################################
+
+# evenement/evenementListe.html
+listeEvenements=Events list
+evenementCree=Create an event
+evenements=Events
+valeur=Value
+evenement=Event
+
+# evenement/evenementSucreListe.html
+evenementssucre=Sugar events
+
+# evenement/evenementTraitementListe.html
+evenementstraitement=Treatment events
+
+# evenement/evenementPoidsRucheListe.html
+evenementspoidsruche=Hive weight events
+
+# evenement/evenementCadreRucheListe.html
+evenementcadreruche=Hive frame events
+
+# evenement/evenementRemplissageHausseListe.html
+evenementremplissagehausse=Super filling events
+
+# evenement/evenementRucheAjoutListe.html
+evenementsrucheajout=Hive add in apiary events
+poidsruche=Hive weight
+diff=Difference
+
+# evenement/evenementForm.html
+ajouterEvenement=Add event
+typeEvenement=Event type
+
+#################### hausse ########################################
+
+# hausse/hausseCommentaireLotForm.html
+commentaireLotHausses=Add a comment to the batch of supers
+
+# hausse/hausseForm.html
+saisirnbcadresinfmax=Get number of frames < Max frame number
+nombredecadresmax=Max frame number
+nombredecadres=Frame number
+ajouterHausse=Add a super
+hausse=Super
+
+# hausse/hausseDetail.html
+supprimerhausseevenement=Delete this super and all its events?
+nomhaussesvirgule=Super names separated with a comma
+supprimerhausse?=Delete this super?
+evenementRemplissage=Add a filling event
+haussenonsupprimeerefrecolte=This super cannot be deleted, it is used in an harvest
+supprimerevenement=Delete this event?
+afficherrucheetc=Show/hide hive, swarm...
+Hausses=Supers
+remplissage=Filling
+
+#################### personne ########################################
+
+# personne/personnesListe.html
+prenom=First name
+email=Email
+login=Login
+roles=Roles
+listePersonnes=Persons list
+ajouterPersonne=Add a person
+Personnes=People
+
+# personne/personneForm.html
+emailexiste=This email is already used
+personne=People
+
+# personne/personneDetail.html
+personnenonsupprimeerefrrucher=This person cannot be deleted, she is used on an apiary
+supprimercettepersonne=Delete this person?
+
+#################### recolte ########################################
+
+# recolte/recoltesStatEssaim.html
+Totalpage=Total page
+ProductionEssaim=Swarm Production
+ProductionEssaimRecolte=Swarm/Harvest Production
+
+# recolte/recoltesListe.html
+statistiquesProd=Annual production statistics
+ajouterRecolte=Add a harvest
+Recoltes=Harvests
+
+# recolte/recolteChoixHausses.html
+ajoutretraithaussesrecolte=Addition/Removal of supers
+retirerHausses=Remove supers
+selecthaussestraiter=Select the supers to be processed
+ajouterHausses=Add supers
+
+# recolte/recolteHausseForm.html
+plus=More
+poidsAvantSupPoidsApres=The weight before extraction must be greater than or equal to the weight after extraction.
+poidsVideKg=Empty weight {0}kg
+
+# recolte/recolteDetail.html
+recolte=Harvest
+poidsMiel=Honey weight
+enlverhaussesrecoltedelai= The harvest is more than {0} days old, abort.
+poidsAvant=Weight before harvest
+poidsApres=Weight after harvest
+recolteHausseDepot=Remove all supers of the harvest from their hives
+enlevertoutesleshaussesrecolte=Remove all supers of this harvest from their hives?
+supprimerrecolteethausses=Remove this harvest and all its supers?
+statistiquesessaims=Swarms statistics
+saisirpoids=Get weight
+totalPourLaRuche=Total for the hive
+choixHausesRecolte=Select harvest supers
+typeMiel=Honey type
+poidsMielPot=Honey weight jarred
+poidsMielMoyen=Honey average weight per hive
+haussesRecolte=Harvest supers
+
+# recolte/recoltesStat.html
+productionessaim=Production by swarm. 
+poidsMielHausses=Supers honey weight
+
+#################### ruche ########################################
+
+# ruche/ruchesListePlus.html ruche/ruchesListePlusRucher.html
+commentaire1=Comments1
+commentaire2=Comments2
+commentaire3=Comments3
 
 # ruche/rucheDetail.html
 ruchenepeutetresupprimeerecolte=This hive cannot be deleted, it is used in a harvest
@@ -212,9 +430,33 @@ pesee=Weighing
 cadresLe=frames on
 evenruchercadreaide=B built, G embossed, A initiated, M Honey, P Pollen, I Indeterminate, V empty, T partition, Non sealed brood O, open U
 
-# essaim/essaimGraphe.html
-MielKg=Honey(kg)
-MielDescKg=Descendants honey(kg) 
+# ruche/rucheCommentaireLotForm.html
+commentaireLotRuche=Add a comment to the batch of hives  
+
+# ruche/rucheTypesListe.html
+rucheTypes=Hive types
+ajouterRucheType=Add a hive type
+
+#################### rucher ########################################
+
+# rucher/rucherStatistiques.html
+aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min and Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
+ProductionRuchersRecolte=Production Apiaries per harvest
+
+# rucher/rucherDetail.html
+Pasderuche=Currently no hive in this apiary
+depotNePeutEtreSupprime=The depot cannot be deleted
+ruchernonsupprimerefrecolte=This apiary cannot be deleted, it is used in a harvest
+supprimerruchereteven=Delete this apiary and all its events?
+supprimercerucher?=Delete this apiary?
+nomruchesvirgule=Hive names separated with a comma
+historique=History
+poidsVide=Weight
+nbCadres=Frames
+rucher=Apiary
+depot=Depot
+ajoutRuches=Add hives
+poidsParRuches=Weight/Hives
 
 # rucher/ruchersListe.html
 carteGg=Google Map
@@ -278,230 +520,6 @@ exportPng=PNG export
 exportPdf=PDF export
 distButinage=Foraging distances
 Pasdessaim=No swarm
-
-# personne/personnesListe.html
-prenom=First name
-email=Email
-login=Login
-roles=Roles
-listePersonnes=Persons list
-ajouterPersonne=Add a person
-Personnes=People
-
-# personne/personneForm.html
-emailexiste=This email is already used
-personne=People
-
-# personne/personneDetail.html
-personnenonsupprimeerefrrucher=This person cannot be deleted, she is used on an apiary
-supprimercettepersonne=Delete this person?
-
-# essaim/essaimsListe.html
-statistiquesproduction=Production satistics
-statistiquesage=Queens age statistics
-selectessaimstraiter=Select swarms for treatment
-evenementsSucre=Add sugar events
-evenementsTraitement=Add treatment events
-evenementsCommentaire=Add comment events
-BLUE=Blue
-WHITE=White
-YELLOW=Yellow
-RED=Red
-GREEN=Green
-ORANGE=
-ajouterEssaim=Add a swarm
-reineMarquee=Marked queen
-reineCouleurMarquage=Marking color
-reineDateNaissance=Date of birth
-souche=Stem
-agressivite=Agressiveness
-proprete=Cleanliness
-listeEssaims=Swarms list
-
-# essaim/essaimSucreLotForm.html
-ajoutSucreLot=Add sugar to the batch of swarms 
-
-# essaim/essaimTraitementLotForm.html
-traitementLot=Batch Varroa treatment 
-
-# essaim/essaimCommentaireLotForm.html
-commentaireLotEssaim=Add a comment to the batch of swarms
-
-# ruche/rucheCommentaireLotForm.html
-commentaireLotRuche=Add a comment to the batch of hives  
-
-# hausse/hausseCommentaireLotForm.html
-commentaireLotHausses=Add a comment to the batch of supers
-
-# essaim/essaimAssociationForm.html
-echangePositionsRuches=Exchange positions of hives {0} and {1}
-AttentionDipersion=Attention save will disperse the swarm {0}
-association=Association
-
-# essaim/essaimSucreForm.html
-ajoutSucre=Add sugar 
-
-# essaim/essaimAssociation.html
-mettreessaimdanslaruche=Put this swarm in hive :
-AvecEssaim=With Swarm
-essaimdanslaruche=This swarm in in hive
-associationruche=Association with a hive
-
-mettreessaimdansruche=Put swarm in this hive
-retourrucheaudepot=Hive back to depot
-
-# essaim/essaimDetail.html
-essaimsupprimerecolte=This swarm cannot be deleted, it is used in an harvest
-supprimeressaimevenements=Delete this swarm and his events?
-supprimeressaim=Delete this swarm?
-nexistentPasOuPasVides=do not exist or are not empty
-nomessaimsvirgule=Swarm names separated with a comma\nOr with the name of a hive after the name\nof a swarm separated by a semicolon 
-graphedescendance=Descendants graph
-evenementCommentaireEssaim=Add a swarm comment event
-evenementSucre=Add a sugar event
-evenementTraitement=Add a treatment event
-evenementDispersion=Add a dispersion event/Change queen
-evenementPesee=Add a weight event
-evenementCadres=Add a frame event
-essaimer=Swarm
-actionSucre=Sugar
-traitement=Varroa treatment
-Essaims=Swarms
-essaim=Swarm
-
-# essaim/essaimDispersionForm.html
-aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
-nouvellereine=New queen, swarm for hive
-creationevecadrezero=Create 0 super event
-dispersion=Dispersing 
-
-# hausse/hausseForm.html
-saisirnbcadresinfmax=Get number of frames < Max frame number
-nombredecadresmax=Max frame number
-nombredecadres=Frame number
-ajouterHausse=Add a super
-hausse=Super
-
-# Hausse detail clone
-clonehaussecreees=Super(s) {0} created
-
-# récoltes
-recolte=Harvest
-Recoltes=Harvests
-date=Date
-poidsMiel=Honey weight
-remplissage=Filling
-ajouterRecolte=Add a harvest
-
-# enum TypeMiel.java
-GARRIGUE=Garrigue
-LAVANDE=Lavander
-CHATAIGNIER=Chestnut tree
-TOUTES_FLEURS=Polyfloral
-ROMARIN=Rosemary
-
-# recolte/recolteChoixHausses.html
-ajoutretraithaussesrecolte=Addition/Removal of supers
-retirerHausses=Remove supers
-selecthaussestraiter=Select the supers to be processed
-ajouterHausses=Add supers
-
-# recolte/recolteHausseForm.html
-plus=More
-poidsAvantSupPoidsApres=The weight before extraction must be greater than or equal to the weight after extraction.
-poidsVideKg=Empty weight {0}kg
-
-# recolte/recolteDetail.html
-enlverhaussesrecoltedelai= The harvest is more than {0} days old, abort.
-poidsAvant=Weight before harvest
-poidsApres=Weight after harvest
-recolteHausseDepot=Remove all supers of the harvest from their hives
-enlevertoutesleshaussesrecolte=Remove all supers of this harvest from their hives?
-supprimerrecolteethausses=Remove this harvest and all its supers?
-statistiquesessaims=Swarms statistics
-saisirpoids=Get weight
-totalPourLaRuche=Total for the hive
-choixHausesRecolte=Select harvest supers
-typeMiel=Honey type
-poidsMielPot=Honey weight jarred
-poidsMielMoyen=Honey average weight per hive
-haussesRecolte=Harvest supers
-
-# recolte/recoltesStat.html
-productionessaim=Production by swarm. 
-poidsMielHausses=Supers honey weight
-
-# enum TypeEvenement.java
-RUCHEAJOUTRUCHER=Add in an apiary
-AJOUTESSAIMRUCHE=Swarm set in hive
-HAUSSEPOSERUCHE=Add a super
-HAUSSERETRAITRUCHE=Remove a super
-HAUSSEREMPLISSAGE=Super filling
-ESSAIMTRAITEMENT=Swarm treatment
-ESSAIMTRAITEMENTFIN=Samrm end of treatment
-ESSAIMSUCRE=Swarm sugar
-COMMENTAIRERUCHE=Hive comment 
-COMMENTAIREHAUSSE=Super comment
-COMMENTAIREESSAIM=Swarm comment
-COMMENTAIRERUCHER=Apiary comment
-ESSAIMDISPERSION=Swarm dispersing
-RUCHEPESEE=Hive weight
-RUCHECADRE=Cadres de la ruche
-
-# evenement/evenementListe.html
-listeEvenements=Events list
-
-# includeForm.html
-finTraitement=End of treatment
-touteperiode=Any period
-moinsdunan=Less than a year
-moinsdunmois=Less than a month
-moinsdunesemaine=Less than a week
-moinsdunjour=Less than a day
-datesprecises=Specific dates
-
-# evenement/evenementSucreListe.html
-evenementssucre=Sugar events
-
-# evenement/evenementTraitementListe.html
-evenementstraitement=Treatment events
-
-# evenement/evenementPoidsRucheListe.html
-evenementspoidsruche=Hive weight events
-
-# evenement/evenementCadreRucheListe.html
-evenementcadreruche=Hive frame events
-
-# evenement/evenementRemplissageHausseListe.html
-evenementremplissagehausse=Super filling events
-
-# evenement/evenementRucheAjoutListe.html
-evenementsrucheajout=Hive add in apiary events
-poidsruche=Hive weight
-diff=Difference
-
-# ruche/rucheTypesListe.html
-rucheTypes=Hive types
-ajouterRucheType=Add a hive type
-
-valeur=Value
-typeEvenement=Event type
-evenement=Event
-evenements=Events
-ajouterEvenement=Add event
-evenementCree=Create an event
-aucun=<None>
-aucune=<None>
-
-# hausse/hausseDetail.html
-supprimerhausseevenement=Delete this super and all its events?
-nomhaussesvirgule=Super names separated with a comma
-supprimerhausse?=Delete this super?
-evenementRemplissage=Add a filling event
-haussenonsupprimeerefrecolte=This super cannot be deleted, it is used in an harvest
-supprimerevenement=Delete this event?
-afficherrucheetc=Show/hide hive, swarm...
-Hausses=Supers
 
 # rucher/rucherMeteo.html
 aujourdhui=Today
