personneDetail.html tableau ruchers ou "Pas de rucher"

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -326,6 +326,7 @@ personne=Personne
 # personne/personneDetail.html
 personnenonsupprimeerefrrucher=Cette personne ne peut être supprimée, elle est référencée dans un rucher
 supprimercettepersonne=Supprimer cette personne ?
+Pasderucher=Pas de rucher avec cette personne pour contact
 
 #################### recolte ########################################
 
@@ -444,7 +445,7 @@ aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit T
 ProductionRuchersRecolte=Production Ruchers par récolte
 
 # rucher/rucherDetail.html
-Pasderuche=Pas de ruche actuellement dans ce rucher
+Pasderuche=Pas de ruche dans ce rucher
 depotNePeutEtreSupprime=Le dépôt ne peut être supprimé
 ruchernonsupprimerefrecolte=Ce rucher ne peut être supprimé, il est référencé dans une récolte
 supprimerruchereteven=Supprimer ce rucher et ses événements ?
