--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -326,6 +326,7 @@ personne=People
 # personne/personneDetail.html
 personnenonsupprimeerefrrucher=This person cannot be deleted, she is used on an apiary
 supprimercettepersonne=Delete this person?
+Pasderucher=No apiary has this person as contact
 
 #################### recolte ########################################
 
@@ -444,7 +445,7 @@ aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced,
 ProductionRuchersRecolte=Production Apiaries per harvest
 
 # rucher/rucherDetail.html
-Pasderuche=Currently no hive in this apiary
+Pasderuche=No hive in this apiary
 depotNePeutEtreSupprime=The depot cannot be deleted
 ruchernonsupprimerefrecolte=This apiary cannot be deleted, it is used in a harvest
 supprimerruchereteven=Delete this apiary and all its events?
